Comment erroneous tests in the Unit test test cases generated by RoostGPT